--- a/ui-timeline.html
+++ b/ui-timeline.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -10,6 +11,7 @@
         <link href="bower_components/ionicons/css/ionicons.min.css" rel="stylesheet" type="text/css" />
         <!-- Theme style -->
         <link href="css/admin.css" rel="stylesheet" type="text/css" />
+        
     </head>
     <body class="skin-blue">
         <!-- header logo: style can be found in header.less -->
@@ -293,7 +295,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="widgets.html">
+                            <a href="examples-widgets.html">
                                 <i class="fa fa-th"></i> <span>Widgets</span> <small class="badge pull-right bg-green">new</small>
                             </a>
                         </li>
@@ -304,9 +306,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="charts/morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
-                                <li><a href="charts/flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
-                                <li><a href="charts/inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
+                                <li><a href="charts-morris.html"><i class="fa fa-angle-double-right"></i> Morris</a></li>
+                                <li><a href="charts-flot.html"><i class="fa fa-angle-double-right"></i> Flot</a></li>
+                                <li><a href="charts-inline.html"><i class="fa fa-angle-double-right"></i> Inline charts</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -316,11 +318,11 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="UI/general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
-                                <li><a href="UI/icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
-                                <li><a href="UI/buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
-                                <li><a href="UI/sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
-                                <li><a href="UI/timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
+                                <li><a href="ui-general.html"><i class="fa fa-angle-double-right"></i> General</a></li>
+                                <li><a href="ui-icons.html"><i class="fa fa-angle-double-right"></i> Icons</a></li>
+                                <li><a href="ui-buttons.html"><i class="fa fa-angle-double-right"></i> Buttons</a></li>
+                                <li><a href="ui-sliders.html"><i class="fa fa-angle-double-right"></i> Sliders</a></li>
+                                <li><a href="ui-timeline.html"><i class="fa fa-angle-double-right"></i> Timeline</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -329,9 +331,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="forms/general.html"><i class="fa fa-angle-double-right"></i> General Elements</a></li>
-                                <li><a href="forms/advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a></li>
-                                <li><a href="forms/editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
+                                <li><a href="forms-general.html"><i class="fa fa-angle-double-right"></i> General Elements</a></li>
+                                <li><a href="forms-advanced.html"><i class="fa fa-angle-double-right"></i> Advanced Elements</a></li>
+                                <li><a href="forms-editors.html"><i class="fa fa-angle-double-right"></i> Editors</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -340,18 +342,18 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="tables/simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
-                                <li><a href="tables/data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
+                                <li><a href="tables-simple.html"><i class="fa fa-angle-double-right"></i> Simple tables</a></li>
+                                <li><a href="tables-data.html"><i class="fa fa-angle-double-right"></i> Data tables</a></li>
                             </ul>
                         </li>
                         <li>
-                            <a href="calendar.html">
+                            <a href="examples-calendar.html">
                                 <i class="fa fa-calendar"></i> <span>Calendar</span>
                                 <small class="badge pull-right bg-red">3</small>
                             </a>
                         </li>
                         <li>
-                            <a href="mailbox.html">
+                            <a href="examples-mailbox.html">
                                 <i class="fa fa-envelope"></i> <span>Mailbox</span>
                                 <small class="badge pull-right bg-yellow">12</small>
                             </a>
@@ -362,13 +364,13 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="examples/invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
-                                <li><a href="examples/login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
-                                <li><a href="examples/register.html"><i class="fa fa-angle-double-right"></i> Register</a></li>
-                                <li><a href="examples/lockscreen.html"><i class="fa fa-angle-double-right"></i> Lockscreen</a></li>
-                                <li><a href="examples/404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
-                                <li><a href="examples/500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
-                                <li><a href="examples/blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a></li>
+                                <li><a href="examples-invoice.html"><i class="fa fa-angle-double-right"></i> Invoice</a></li>
+                                <li><a href="examples-login.html"><i class="fa fa-angle-double-right"></i> Login</a></li>
+                                <li><a href="examples-register.html"><i class="fa fa-angle-double-right"></i> Register</a></li>
+                                <li><a href="examples-lockscreen.html"><i class="fa fa-angle-double-right"></i> Lockscreen</a></li>
+                                <li><a href="examples-404.html"><i class="fa fa-angle-double-right"></i> 404 Error</a></li>
+                                <li><a href="examples-500.html"><i class="fa fa-angle-double-right"></i> 500 Error</a></li>
+                                <li><a href="examples-blank.html"><i class="fa fa-angle-double-right"></i> Blank Page</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -572,6 +574,7 @@
                         </div><!-- /.col -->
                     </div><!-- /.row -->
 
+
                 </section><!-- /.content -->
             </aside><!-- /.right-side -->
         </div><!-- ./wrapper -->
@@ -582,5 +585,6 @@
         <script src="js/AdminLTE/app.js" type="text/javascript"></script>
         <!-- AdminLTE for demo purposes -->
         <script src="js/AdminLTE/demo.js" type="text/javascript"></script>
+        
     </body>
 </html>
