--- a/examples-login.html
+++ b/examples-login.html
@@ -20,7 +20,7 @@
         <div class="center-block">
             <br />
             <h1 class="align-center" style="font-family: 'Kaushan Script', cursive;">
-                Joude
+                Joud
             </h1>    
         </div>
         
