--- a/waitingJouder.html
+++ b/waitingJouder.html
@@ -327,7 +327,7 @@
                                       
 
                                           <div class="media-body">
-                                            <h4 class="media-heading">Samera Mahmood
+                                            <h4 class="media-heading">Sara Ali
                                                 <label class="label label-success">12 AED</label>
                                             </h4>
                                             <span class="rating">
